# wstFD

./: CMakeLists.txt  cos1d.cc  cos3d.cc  feg1d.cc  feg1d_k.cc  lanczos.h  periodic.cc  test_1d_tensor.cc  test_2d_tensor.cc  test_3d_jacobi.cc  test_3d_tensor.cc  test_bsh1d.m  test_bsh2d.m  test_bsh3d.m  test_matrix.cc  wstKernel.h  wstMatrix.h  wstModel.h  wstTensor.h  wstTensorT.h  wstUtils.h
