cmake_minimum_required (VERSION 2.6)
project (wstFD)

set (FFTW "/Users/wsttiger/local/fftw-3.3.4-icc")
#set (CMAKE_CXX_FLAGS "-profile-functions -profile-loops=all -profile-loops-report=2 -g -O2 -std=c++11 -mkl")
set (CMAKE_CXX_FLAGS " -g -O2 -std=c++11 -mkl")
set (CMAKE_EXE_LINKER_FLAGS "-Wl,-no_pie")
include_directories("${FFTW}/include")

add_executable(cos1d cos1d.cc)
add_executable(feg1d feg1d.cc)
add_executable(feg1d_k feg1d_k.cc)
add_executable(test1d test_1d_tensor.cc)
add_executable(test2d test_2d_tensor.cc)
add_executable(test3d test_3d_tensor.cc)
